--- a/app/templates/master.html
+++ b/app/templates/master.html
@@ -22,8 +22,9 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
             <ul class="nav navbar-nav">
+                <li><a href="https://github.com/sjuanandres0/disaster_response_pipeline_project">GitHub Code</a></li>
+                <li><a href="https://github.com/sjuanandres0/">Contact</a></li>
                 <li><a href="https://www.udacity.com/">Made with Udacity</a></li>
-                <li><a href="https://github.com/">Contact</a></li>
             </ul>
         </div>
     </div>
